docs/7.57/md/abenhana_data_aging.md
---
title: "Data Aging in SAP HANA"
description: |
  The data aging concept makes it possible to distinguish between current (HOT) data and outdated (COLD) data within SAP HANA database(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_database_glosry.htm 'Glossary Entry') tables. Application programming defines which data is curre
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_data_aging.htm"
abapFile: "abenhana_data_aging.htm"
keywords: ["select", "do", "if", "case", "try", "catch", "method", "class", "data", "abenhana", "aging"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) →  [ABAP and SAP HANA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_hana.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Data Aging in SAP HANA, ABENHANA_DATA_AGING, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%
0D%0ASuggestion for improvement:)

Data Aging in SAP HANA

The data aging concept makes it possible to distinguish between current (HOT) data and outdated (COLD) data within [SAP HANA database](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_database_glosry.htm "Glossary Entry") tables. Application programming defines which data is current or outdated in a special [temperature column](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentemperature_column_glosry.htm "Glossary Entry") in the database table with the prescribed name \_DATAAGING. The entries in this column partition the data in the database table and make it possible to archive outdated data in a transparent way for application programming. Only the data from the current partition is held in the working memory of the SAP HANA database. Partitions with outdated data, on the other hand, remain in persistent memory. This partitioning is performed in tasks called data aging runs.

By default, AS ABAP respects data aging by ensuring that the database interface only implicitly reads current and not outdated data when a database table on the [SAP HANA database](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_database_glosry.htm "Glossary Entry") is accessed. This also applies to access using AMDP. The way data aging is handled can be modified as follows:

-   The profile parameter abap/data\_aging enables and disables data aging.
-   The enabling of data aging for [CDS views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_view_glosry.htm "Glossary Entry") and [CDS table functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_table_function_glosry.htm "Glossary Entry") can be overridden for ABAP SQL access using the annotation @DataAging.noAgingRestriction:true. If a CDS entity with this annotation is accessed using ABAP SQL, all data is read.
-   The classes CL\_ABAP\_SESSION\_TEMPERATURE and CL\_ABAP\_STACK\_TEMPERATURE can be used to override the current temperature of specific contexts in the current ABAP program and the database interface then reads the data with this temperature if data aging is enabled.

If tables are not accessed using the AS ABAP database interface, that is, using [non-ABAP-managed Native SQL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_managed_db_objects_nsql.htm), data aging is not respected.

If database tables have a \_DATAAGING column and are therefore subject to the data aging concept and data is accessed that does not have the current temperature, it is usually the case that all partitions must first be loaded into the main memory of the SAP HANA database. This can have a negative effect on performance. [Dependency rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_data_aging_druls.htm) can be used to optimize access in such a way that only the required partitions are loaded.

Hints

-   Current and outdated data can be handled implicitly only on [SAP HANA databases](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_database_glosry.htm "Glossary Entry"). On other databases, the database interface always reads all data. The value false for the annotation @DataAging.noAgingRestriction of a CDS entity is ignored here.
-   From a technical perspective, the database interface appends the addition WITH RANGE\_RESTRICTION('CURRENT'); to every SQL statement, including calls of [AMDP procedures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_procedure_glosry.htm "Glossary Entry") and [functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_function_glosry.htm "Glossary Entry"). For this reason, Native SQL statements should not be ended with a semicolon ; when using [EXEC SQL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapexec.htm) or [ADBC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc.htm) for the SAP HANA database.
-   Generally speaking, only current data is of interest for transactional applications, whereas analytical applications require access to outdated data as well.

Example

The database table DAAG\_SFLIGHT has a \_DATAAGING column, which means that the data aging concept applies on a SAP HANA database. A data aging run partitions the data and only data where the \_DATAAGING column contains the value '00000000' is loaded into the working memory of the database. The database interface selects only this data by default. This is why the result set of the first SELECT statement is empty. The method SET\_TEMPERATURE of the class CL\_ABAP\_SESSION\_TEMPERATURE sets the temperature of the current [internal session](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninternal_session_glosry.htm "Glossary Entry") so that data from the entire past year is respected. If data like this exists, the result set of the second SELECT statement is not empty. For this to happen, data from additional partitions must be loaded into the working memory.

SELECT \*
       FROM daag\_sflight
       WHERE \_dataaging <> '00000000'
       INTO TABLE @FINAL(result1).
cl\_demo\_output=>write( result1 ).
TRY.
    cl\_abap\_session\_temperature=>get\_session\_control(
      )->set\_temperature( im\_temperature = CONV d( sy-datlo - 363 ) ).
  CATCH cx\_abap\_session\_temperature INTO FINAL(exc).
    cl\_demo\_output=>display( exc->get\_text( ) ).
    RETURN.
ENDTRY.
SELECT \*
       FROM daag\_sflight
       WHERE \_dataaging <> '00000000'
       INTO TABLE @FINAL(result2).
cl\_demo\_output=>display( result2 ).

This example is for demonstration purposes only. ABAP programs should never access the temperature column explicitly or read it.

Continue
[Dependency Rules for Optimization of Access to Outdated Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_data_aging_druls.htm)